# directory_interrogator

./: Cargo.toml  LICENSE  README.md
data/: DROID_SignatureFile_V122.xml  file_signatures.csv  file_signatures_v2.csv  file_sigs.csv
python_scripts/: magic_bit_scraper.py
src/: arguments_gather.rs  file_dialog.rs  file_hasher.rs  folder_walk.rs  main.rs
src/archive_interrogater/: mod.rs
src/file_type_eval/: mod.rs
