[package]
name = "directory_interrogator"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
file-format = "0.28.0"
include_dir = "0.7.4"
pyo3 = { version = "0.28.2", features = ["auto-initialize"] }
pyo3-ffi = "0.28.2"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
